# rust-ecommerce-project

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml
.devcontainer/: devcontainer.json
backend/: .env  Cargo.toml  Dockerfile  Rocket.toml  compose.yaml  diesel.toml
backend/migrations/2024-08-05-072451_create_users/: up.sql
backend/src/: lib.rs  models.rs  schema.rs
frontend/: Cargo.toml  Dockerfile  index.css  index.html
frontend/src/: main.rs
