[package]
name = "backend"
version = "0.0.0"
edition = "2021"
publish = false
default-run = "backend"

[dependencies]
rocket = "0.5.1"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenv = "0.15"
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0.204", features = ["derive"]}
password-hash = "0.5.0"
pbkdf2 = {version = "0.12.2", features = ["simple"]}
rand_core = "0.6"